# Rainborg

./: CMakeLists.txt  README.md  proposal_fluids.md
assets/: dambreak.xml  dambreak_naive.xml  drops.xml  testscene.xml
cmake/: Common.cmake  FindGLFW.cmake  FindGLM.cmake
openglframework/: CMakeLists.txt
openglframework/demo/: CMakeLists.txt  Scene.cpp  Scene.h  main.cpp
openglframework/freeglut/: freeglut_internal.h
openglframework/freeglut/GL/: freeglut_std.h
openglframework/src/: Camera.cpp  GLFWViewer.cpp  GLFWViewer.h  GlutViewer.cpp  Shader.cpp  Texture2D.h  definitions.h  openglframework.h
openglframework/src/shaders/: phong.frag
src/: Boundary.cpp  Boundary.h  Fluid.cpp  Fluid.h  FluidBoundary.cpp  FluidBoundary.h  FluidBoundingBox.cpp  FluidBoundingBox.h  FluidBrick.cpp  FluidBrick.h  FluidForce.cpp  FluidForce.h  FluidRenderer.cpp  FluidRenderer.h  FluidSimpleGravityForce.cpp  FluidSimpleGravityForce.h  FluidVolume.cpp  FluidVolume.h  Force.h  GPUFluid.cu  GPUFluid.h  GPUMacro.h  GridGPUFluid.cpp  GridGPUFluid.h  MathDefs.cpp  MathDefs.h  NaiveGPUFluid.cpp  NaiveGPUFluid.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  RenderingUtils.cpp  RenderingUtils.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  SceneXMLParser.cpp  SceneXMLParser.h  (+16 more)
src/gpu/: GPUFluid.cu  GPUFluid.h  GPUFluidLessNaive.cu  GPUFluidLessNaive.h  GPUFluidNaive.cu  GPUFluidNaive.h  GPUHelper.h  GridGPUFluidKernel.cu  GridGPUFluidKernel.h  NaiveGPUFluidKernel.cu  NaiveGPUFluidKernel.h
src/shaders/: point.frag  point.vert
